# django-htmx

./: manage.py  pyproject.toml
htmx_tasks/: asgi.py  settings.py  urls.py  wsgi.py
task/: models.py  urls.py  views.py
task/migrations/: 0001_initial.py
task/templates/task/: base.html  index.html
task/templates/task/includes/: task-list.html
